--- a/BTBuoi_04/case_problem_01/cg_validate.css
+++ b/BTBuoi_04/case_problem_01/cg_validate.css
@@ -4,8 +4,8 @@
    Case Problem 1
 
    ACGIP Registration Validation Style Sheet
-   Author: 
-   Date:   
+   Author: Tường Vy
+   Date:   10/12/2022
 
    Filename: cg_validate.css
 
